[gd_scene load_steps=4 format=3 uid="uid://dpdwrut1e04vv"]

[ext_resource type="Script" path="res://Menus/MainMenu.gd" id="1_lq2rj"]
[ext_resource type="FontFile" uid="uid://cjtpjddif3jnn" path="res://Menus/Assets/PublicPixel-z84yD.ttf" id="2_1k5th"]
[ext_resource type="Texture2D" uid="uid://b858vyxfiifca" path="res://Menus/Assets/Still-1.jpg" id="3_dfcvi"]

[node name="MainMenu" type="Control"]
layout_direction = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lq2rj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -154.0
offset_right = 200.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1k5th")
theme_override_font_sizes/font_size = 30
text = "START"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1k5th")
theme_override_font_sizes/font_size = 30
text = "OPTIONS"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1k5th")
theme_override_font_sizes/font_size = 30
text = "QUIT"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -565.0
offset_top = -306.0
offset_right = 574.0
offset_bottom = -187.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_1k5th")
theme_override_font_sizes/font_size = 70
text = "LIQUIDATION DASH"
editable = false
scroll_smooth = true

[node name="Picture" type="TextureRect" parent="."]
z_index = -3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_dfcvi")
metadata/_edit_lock_ = true

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_pressed"]
